--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,54 +13,53 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
-    <!--    TakePhoto Permissions   -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- TakePhoto Permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name="edu.aku.hassannaqvi.srcDadu052020.core.MainApp"
+        android:name=".core.MainApp"
         android:allowBackup="true"
         android:icon="@drawable/tpvics_logo"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme1">
+        <activity android:name=".ui.sections.activity_section_a"></activity>
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionSubInfoActivity"
+            android:name=".ui.sections.SectionSubInfoActivity"
             android:supportsRtl="false"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionCHAActivity"
+            android:name=".ui.sections.SectionCHAActivity"
             android:label="@string/ch_title"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionCHBActivity"
+            android:name=".ui.sections.SectionCHBActivity"
             android:label="@string/chBsec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionCHCActivity"
+            android:name=".ui.sections.SectionCHCActivity"
             android:label="@string/chsec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionCHDActivity"
+            android:name=".ui.sections.SectionCHDActivity"
             android:label="@string/chsec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionCHEActivity"
+            android:name=".ui.sections.SectionCHEActivity"
             android:label="@string/chsec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionSS2Activity"
+            android:name=".ui.sections.SectionSS2Activity"
             android:label="@string/sssec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionSS1Activity"
+            android:name=".ui.sections.SectionSS1Activity"
             android:label="@string/sssec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.other.SplashscreenActivity"
+            android:name=".ui.other.SplashscreenActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -70,60 +69,57 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.other.LoginActivity"
+            android:name=".ui.other.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionInfoActivity"
+            android:name=".ui.sections.SectionInfoActivity"
             android:label="@string/hhsec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionHHActivity"
+            android:name=".ui.sections.SectionHHActivity"
             android:label="@string/hhsec"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.list_activity.FamilyMembersListActivity"
+            android:name=".ui.list_activity.FamilyMembersListActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sections.SectionBActivity"
+            android:name=".ui.sections.SectionBActivity"
             android:label="@string/tdheading"
-            android:parentActivityName="edu.aku.hassannaqvi.srcDadu052020.ui.list_activity.FamilyMembersListActivity"
+            android:parentActivityName=".ui.list_activity.FamilyMembersListActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.aku.hassannaqvi.srcDadu052020.ui.list_activity.FamilyMembersListActivity" />
         </activity>
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.other.EndingActivity"
+            android:name=".ui.other.EndingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.other.ChildEndingActivity"
+            android:name=".ui.other.ChildEndingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.other.MainActivity"
+            android:name=".ui.other.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.core.AndroidDatabaseManager"
-            android:parentActivityName="edu.aku.hassannaqvi.srcDadu052020.ui.other.MainActivity"
+            android:name=".core.AndroidDatabaseManager"
+            android:parentActivityName=".ui.other.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.sync.SyncActivity"
-            android:parentActivityName="edu.aku.hassannaqvi.srcDadu052020.ui.other.MainActivity"
+            android:name=".ui.sync.SyncActivity"
+            android:parentActivityName=".ui.other.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="edu.aku.hassannaqvi.srcDadu052020.ui.other.TakePhoto"
+            android:name=".ui.other.TakePhoto"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-
-        <service android:name="edu.aku.hassannaqvi.srcDadu052020.DownloadFileService" />
+        <service android:name=".DownloadFileService" />
     </application>
 
 </manifest>
