--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:name=".core.MainApp"
         android:allowBackup="true"
-        android:icon="@drawable/tpvics_logo"
+        android:icon="@drawable/src_icon"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
@@ -33,38 +33,8 @@
             android:name=".ui.sections.SectionAActivity"
             android:label="@string/taheading"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionSubInfoActivity"
-            android:supportsRtl="false"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".ui.sections.SectionCHAActivity"
-            android:label="@string/ch_title"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionCHBActivity"
-            android:label="@string/chBsec"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionCHCActivity"
-            android:label="@string/chsec"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionCHDActivity"
-            android:label="@string/chsec"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionCHEActivity"
-            android:label="@string/chsec"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionSS2Activity"
-            android:label="@string/sssec"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionSS1Activity"
-            android:label="@string/sssec"
-            android:screenOrientation="portrait" />
+
+
         <activity
             android:name=".ui.other.SplashscreenActivity"
             android:screenOrientation="portrait"
@@ -79,33 +49,12 @@
             android:name=".ui.other.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".ui.sections.SectionInfoActivity"
-            android:label="@string/hhsec"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.sections.SectionHHActivity"
-            android:label="@string/hhsec"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.list_activity.FamilyMembersListActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".ui.sections.SectionBActivity"
-            android:label="@string/tdheading"
-            android:parentActivityName=".ui.list_activity.FamilyMembersListActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.aku.hassannaqvi.srcDadu052020.ui.list_activity.FamilyMembersListActivity" />
-        </activity>
+
+
         <activity
             android:name=".ui.other.EndingActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.other.ChildEndingActivity"
-            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.other.MainActivity"
             android:screenOrientation="portrait"
@@ -120,11 +69,6 @@
             android:parentActivityName=".ui.other.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".ui.other.TakePhoto"
-            android:hardwareAccelerated="true"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".DownloadFileService" />
     </application>
