--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,23 +6,17 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
-
+    buildToolsVersion "29.0.3"
     def versionPropsFile = file('version.properties')
-
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
     if (versionPropsFile.canRead()) {
         Properties versionProps = new Properties()
-
-
         versionProps.load(new FileInputStream(versionPropsFile))
-
         def code = versionProps['VERSION_CODE'].toInteger() + 1
-
         versionProps['VERSION_CODE'] = code.toString()
         versionProps.store(versionPropsFile.newWriter(), null)
-
         defaultConfig {
             applicationId "edu.aku.hassannaqvi.srcDadu052020"
             minSdkVersion 21
@@ -54,13 +48,13 @@ dependencies {
     })
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.media:media:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
     testImplementation 'junit:junit:4.13'
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
     implementation 'com.jakewharton:butterknife:10.2.1'
@@ -76,7 +70,7 @@ dependencies {
 
     //Ali mask
     implementation 'com.github.AliAzaz:Edittext-Library:2.0.0'
-    implementation 'com.github.AliAzaz:AndroidValidatorCrawler:1.0.2'
+    implementation 'com.github.AliAzaz:AndroidValidatorCrawler:1.0.3'
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.balysv:material-ripple:1.0.2'
@@ -106,7 +100,7 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
 
     //Coroutine
-    def coroutine_version = '1.3.3'
+    def coroutine_version = '1.3.6'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
